Fixed inner book spacing and books sizing across the board

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -8,8 +8,8 @@
     position: absolute;
     top: 50%;
     left: 30%;
-    width: 400px;
-    height: 500px;
+    width: 300px !important;
+    height: 400px !important;
     background: #e0e1dc;
     transform-style: preserve-3d;
     transform: translate(-50%,-50%) perspective(2000px);
